// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionButton /> UI snapshots checkbox selected, without custom icon 1`] = `
.emotion-8 {
  border-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #ededf0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  border: 1px solid;
  border-color: #332e54;
  background: #ffffff;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 4px;
  background: #332e54;
  border-color: #332e54;
}

.emotion-0 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-0 svg {
  opacity: 1;
  color: #ffffff;
  fill: #ffffff;
}

.emotion-4 {
  margin-left: 1rem;
}

.emotion-2 {
  color: #524D6E;
  line-height: 1.5;
}

<button
  className="emotion-8 emotion-9"
  onClick={[Function]}
  role="checkbox"
  type="button"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-0 emotion-1"
      selected={true}
    >
      <svg
        height={16}
        width={16}
      />
    </div>
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
      >
        checkbox text
      </div>
    </div>
  </div>
</button>
`;

exports[`<OptionButton /> UI snapshots radio unselected, with icon node prop 1`] = `
.emotion-8 {
  border-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #ededf0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 1rem;
}

.emotion-2 {
  color: #524D6E;
  line-height: 1.5;
}

.emotion-0 {
  border: 1px solid;
  border-color: #332e54;
  background: #ffffff;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-0 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-0 svg {
  opacity: 1;
  color: #332e54;
  fill: #332e54;
}

<button
  className="emotion-8 emotion-9"
  onClick={[Function]}
  role="radio"
  type="button"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-0 emotion-1"
      selected={false}
    >
      <svg />
    </div>
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
      >
        radio text
      </div>
    </div>
  </div>
</button>
`;
